public/index: tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>React TodoMVC</title>
+    <title>TodoMVC · React + Apollo</title>
   </head>
   <body>
     <section class="todoapp">
@@ -12,7 +12,7 @@
     <footer class="info">
       <p>Double-click to edit a todo</p>
       <p>Created by <a href="http://github.com/herbcaudill/">Herb Caudill</a></p>
-      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+      <p>Maybe at some point part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
   </body>
 </html>
